[gd_scene load_steps=6 format=2]

[ext_resource path="res://sprites/Background 1 Assets/Hexa_Slot_Background_1.png" type="Texture" id=1]
[ext_resource path="res://scripts/upper_field.gd" type="Script" id=2]
[ext_resource path="res://sprites/Background 1 Assets/Hexa_Slot_1.png" type="Texture" id=3]
[ext_resource path="res://animations/hint_outline_upper.anim" type="Animation" id=4]

[sub_resource type="CircleShape2D" id=1]
radius = 0.01

[node name="upper_field" type="Sprite"]
self_modulate = Color( 0.729412, 0.729412, 0.729412, 1 )
scale = Vector2( 0.97, 0.97 )
texture = ExtResource( 3 )
script = ExtResource( 2 )

[node name="upper_field_back" type="Sprite" parent="."]
z_index = -1
texture = ExtResource( 1 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
playback_speed = 2.0
anims/hint_outline_upper = ExtResource( 4 )
[connection signal="area_entered" from="Area2D" to="." method="_on_Area2D_area_entered"]
[connection signal="area_exited" from="Area2D" to="." method="_on_Area2D_area_exited"]
